# django-olympus

./: .dockerignore  Makefile  README.md  setup.cfg  tox.ini
.github/workflows/: publish.yml  publish_test.yml  test.yml
olympus/: __init__.py  apps.py  base.py
olympus/management/commands/: push_to_es.py
olympus/tests/: __init__.py
testapp/testapp/: occ.py  settings.py
testapp/tests/: test_collectors.py
