[metadata]
name = django-olympus
version = attr: olympus.__version__
description = Collect data from django models into ElasticSearch
author = PPB - InfoSec Engineering
author_email = surface@paddypowerbetfair.com
url = https://github.com/surface-security/django-olympus
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Environment :: Web Environment
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Django >= 3.0
    elasticsearch >= 6.8, < 7
    # TODO: make tqdm optional
    tqdm >= 4, < 5
    django-logbasecommand < 1

python_requires = >=3.6

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
source = olympus

[coverage:report]
show_missing = True
skip_covered = True
